# Text_to_3d_Model

./: .gitignore  LICENSE  README.md  hse_tiger_shark.glb  pyproject.toml  requirements.txt
src/: prompt_to_obj.py
src/text2mesh/: text_to_mesh.py
src/text3d/: embed_text_glb.py  prompt_to_glb.py  prompt_to_obj.py  text_to_mesh.py
