[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text3d"
version = "0.1.0"
dependencies = ["numpy", "pillow", "opencv-python", "shapely", "trimesh", "mapbox-earcut"]

[project.scripts]
text3d = "text3d.prompt_to_glb:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
